[package]
name = "server"
version = "0.1.0"
authors = ["arnaud <arnaud.toudic@coding-academy.fr>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.0", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.10.0"
futures = "0.1.25"
hyper = "0.12.25"
log = "0.4"
pretty_env_logger = "0.3.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.18"
